--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -324,6 +324,17 @@
   </div>
 </main>
 
+<app-account-admin></app-account-admin>
+<app-create-account></app-create-account>
+<app-view-account></app-view-account>
+<app-loan-admin></app-loan-admin>
+<app-apply-loan></app-apply-loan>
+<app-view-loan></app-view-loan>
+<app-pay-loan></app-pay-loan>
+<app-bank-admin></app-bank-admin>
+<app-bank-rules></app-bank-rules>
+<app-close-account></app-close-account>
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
@@ -331,6 +342,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
 
 <router-outlet></router-outlet>
